--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
   "main": "index.mjs",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "run": "node --es-module-specifier-resolution=node index.js"
+    "build": "tsc",
+    "run": "node dist/index.js",
+    "build:watch": "tsc --watch",
+    "run:watch": "nodemon dist/index.js --watch dist",
+    "start": "npm-run-all --parallel build:watch run:watch"
   },
   "keywords": [
     "discord",
@@ -13,9 +17,16 @@
   ],
   "author": "zvxayr",
   "license": "ISC",
-  "type": "module",
+  "type": "commonjs",
   "dependencies": {
     "discord.js": "^13.6.0",
-    "dotenv": "^16.0.0"
+    "dotenv": "^16.0.0",
+    "source-map-support": "^0.5.21"
+  },
+  "devDependencies": {
+    "@types/source-map-support": "^0.5.4",
+    "nodemon": "^2.0.15",
+    "npm-run-all": "^4.1.5",
+    "typescript": "^4.5.5"
   }
 }
