--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "run": "node dist/index.js",
     "build:watch": "tsc --watch",
     "run:watch": "nodemon dist/index.js --watch dist",
-    "start": "npm-run-all --parallel build:watch run:watch"
+    "start": "npm-run-all --parallel build:watch run:watch",
+    "prepare": "husky install"
   },
   "keywords": [
     "discord",
@@ -25,8 +26,19 @@
   },
   "devDependencies": {
     "@types/source-map-support": "^0.5.4",
+    "husky": "^7.0.4",
+    "lint-staged": "^12.3.4",
     "nodemon": "^2.0.15",
     "npm-run-all": "^4.1.5",
+    "prettier": "2.5.1",
     "typescript": "^4.5.5"
+  },
+  "lint-staged": {
+    "**/*": "prettier --write --ignore-unknown"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "prettier --write . && git add -A ."
+    }
   }
 }
