--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "discord.js": "^13.6.0",
     "dotenv": "^16.0.0",
+    "eslint-config-airbnb-base": "^15.0.0",
     "source-map-support": "^0.5.21"
   },
   "devDependencies": {
@@ -28,6 +29,8 @@
     "@typescript-eslint/eslint-plugin": "^5.12.0",
     "@typescript-eslint/parser": "^5.12.0",
     "eslint": "^8.9.0",
+    "eslint-config-airbnb-typescript": "^16.1.0",
+    "eslint-plugin-import": "^2.25.4",
     "lint-staged": "^12.3.4",
     "nodemon": "^2.0.15",
     "npm-run-all": "^4.1.5",
