--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,6 +19,8 @@
     "rules": {
         "indent": "off",
         "@typescript-eslint/indent": ["error", 4],
-        "no-restricted-syntax": "off"
+        "no-restricted-syntax": "off",
+        "func-names": ["error", "as-needed"],
+        "object-shorthand": ["error", "consistent-as-needed"]
     }
 }
