--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Server Bot for JPCS-MU Discord Server",
   "main": "index.mjs",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "build": "tsc",
     "run": "node dist/index.js",
     "build:watch": "tsc --watch",
@@ -25,15 +25,19 @@
     "source-map-support": "^0.5.21"
   },
   "devDependencies": {
+    "@types/jest": "^27.4.0",
     "@types/source-map-support": "^0.5.4",
     "@typescript-eslint/eslint-plugin": "^5.12.0",
     "@typescript-eslint/parser": "^5.12.0",
     "eslint": "^8.9.0",
     "eslint-config-airbnb-typescript": "^16.1.0",
     "eslint-plugin-import": "^2.25.4",
+    "jest": "^27.5.1",
     "lint-staged": "^12.3.4",
     "nodemon": "^2.0.15",
     "npm-run-all": "^4.1.5",
+    "ts-jest": "^27.1.3",
+    "ts-node": "^10.5.0",
     "typescript": "^4.5.5"
   }
 }
