--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
     "discord.js": "^13.6.0",
     "dotenv": "^16.0.0",
     "eslint-config-airbnb-base": "^15.0.0",
+    "ramda": "^0.28.0",
     "source-map-support": "^0.5.21",
     "sqlite3": "^4.2.0"
   },
   "devDependencies": {
     "@types/jest": "^27.4.0",
+    "@types/ramda": "^0.27.64",
     "@types/source-map-support": "^0.5.4",
     "@types/sqlite3": "^3.1.8",
     "@typescript-eslint/eslint-plugin": "^5.12.0",
