fix: restored old config
new config breaks build when an exception is uncaught during execution.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,10 +3,10 @@
     "composite": true,
     "target": "es2016",
     "module": "commonjs",
-    "rootDir": ".",
+    "rootDir": "src/",
     "allowJs": true,
     "sourceMap": true,
-    "outDir": ".",
+    "outDir": "dist/",
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
