fix: fixed slow jest testing time

--- a/jest.config.json
+++ b/jest.config.json
@@ -4,5 +4,10 @@
     "coverageDirectory": "coverage",
     "coverageProvider": "v8",
     "modulePathIgnorePatterns": ["dist"],
-    "preset": "ts-jest"
+    "preset": "ts-jest",
+    "globals": {
+        "ts-jest": {
+            "isolatedModules": true
+        }
+    }
 }
