fix: required await in async functions

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,6 +21,7 @@
         "@typescript-eslint/indent": ["error", 4],
         "no-restricted-syntax": "off",
         "func-names": ["error", "as-needed"],
-        "no-param-reassign": "warn"
+        "no-param-reassign": "error",
+        "require-await": "error"
     }
 }
