style: reduced max line length to 100

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,7 +18,12 @@
     ],
     "rules": {
         "indent": "off",
-        "max-len": ["error", { "code": 120, "ignoreStrings": true }],
+        "max-len": ["error", {
+            "code": 100,
+            "ignoreStrings": true,
+            "ignoreRegExpLiterals": true,
+            "ignoreTemplateLiterals": true
+        }],
         "@typescript-eslint/indent": ["error", 4],
         "no-restricted-syntax": "off",
         "func-names": ["error", "as-needed"],
